# rust_sweeper

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: field.rs  field_ui.rs  game_area.rs  game_area_ui.rs  lib.rs  main.rs
src/game_area/: mod.rs  percent.rs  square.rs
src/game_area_ui/: console_ui.rs  mod.rs  sdl_ui.rs
tests/: sweeper_game_test.rs
