[package]
name = "rust_sweeper"
version = "0.2.0"
authors = ["Daniel"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
structopt = "0.3.21"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf"]
